--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "latest",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "latest",
+    "@mui/x-data-grid": "^5.12.3",
     "react": "latest",
     "react-dom": "latest",
     "react-router-dom": "^6.3.0",
