--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "latest",
     "@mui/x-data-grid": "^5.12.3",
+    "moment": "^2.29.3",
     "react": "latest",
     "react-dom": "latest",
     "react-router-dom": "^6.3.0",
