--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,11 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "latest",
     "@mui/x-data-grid": "^5.12.3",
+    "@reduxjs/toolkit": "^1.8.3",
     "moment": "^2.29.3",
     "react": "latest",
     "react-dom": "latest",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "latest"
   },
