--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.29.3",
     "react": "latest",
     "react-dom": "latest",
+    "react-hook-form": "^7.33.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "latest"
