--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "latest",
     "@mui/x-data-grid": "^5.12.3",
     "@reduxjs/toolkit": "^1.8.3",
+    "axios": "^0.27.2",
     "moment": "^2.29.3",
     "react": "latest",
     "react-dom": "latest",
@@ -23,6 +24,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "latest"
   },
+  "proxy": "http://localhost:8080",
   "browserslist": {
     "production": [
       ">0.2%",
