--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,16 +16,16 @@
     "@mui/x-data-grid": "^5.12.3",
     "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.27.2",
+    "http-proxy-middleware": "^2.0.6",
     "moment": "^2.29.3",
     "react": "latest",
     "react-dom": "latest",
     "react-hook-form": "^7.33.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "latest",
+    "react-scripts": "4.0.3",
     "yarn": "^1.22.19"
   },
-  "proxy": "http://localhost:8080",
   "browserslist": {
     "production": [
       ">0.2%",
@@ -42,5 +42,6 @@
   "main": "index.js",
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "proxy" : "http://localhost:8080"
 }
